--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -6,7 +6,10 @@ This is the official Team Komin Roadmap, subject to change at any point in time.
 
 
 = Details =
-
-    * We will be switching the base ROM to AT&T Captivate FroYo release
-    * We will be including a feature that is still super secret in version 3.0.
+    
+    * Ferman will write this as he has expressed a difference of opinion
+    * ....
+    * ....
+    * Verify no hard faults via DDMS
+    * Ensure all apps are up-to-date as of release IE... market and all data/apps
     * Version 3.0 has no set release date/
